tests/parse_print/random_perturb/enum_liberated/delete-04/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/enum_liberated/delete-04/delete-04.essence Error is:
ValidatorError tests/parse_print/random_perturb/enum_liberated/delete-04/delete-04.essence:4:10:
  |
4 | find x : E
  |          ^
Error: Symbol not found "E"
